--- a/excersise.css
+++ b/excersise.css
@@ -4,7 +4,7 @@
 } 
 
 #zumba-info, .zumbatime{
-    color:rgb(230, 211, 202);
+    color:rgb(130, 79, 55);
     text-align: center;
 }
 #poses{
@@ -21,10 +21,11 @@
     width: 300px;
     margin: 15px;
     padding: 15px;
-    background-color: black;
+    background-color: rgb(3, 36, 54);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
+    text-align: center;
 }
 
 .exercise-card:hover {
@@ -35,6 +36,7 @@
     width: 100%;
     border-radius: 6px;
     margin-bottom: 10px;
+    
 }
 
 @keyframes pulse {
@@ -110,18 +112,13 @@
     border: none;
     border-radius: 5px;
 }
-
-.meditation-button:hover {
-    background-color: rgb(35, 192, 192);
-    color: white;
-}
 .container {
 margin-top: 50px;
 
 }
 
 .styled-container {
-background-color:rgb(200, 233, 243);
+background-color:rgb(241, 236, 245);
 border-radius: 15px;
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 padding: 20px;
@@ -140,6 +137,8 @@ text-align: center;
 .paragraph {
 color: #6c757d;
 margin-bottom: 20px;
+letter-spacing: 1.5px;
+font-weight: bold;
 }
 
 .video-container {
