--- a/diet.css
+++ b/diet.css
@@ -1,12 +1,7 @@
 body{
-    background-image: url("https://img.freepik.com/free-photo/honey-corn-ring-with-muesli-bowl-blue-background-high-quality-photo_114579-75392.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-blend-mode: lighten;
-}
-
+    letter-spacing: 1.5px;
     
-
+}
 a{
     text-decoration: none;
     display: inline;
@@ -15,17 +10,23 @@ a{
 .bar{
     display: inline;
     list-style-type: none;
-    margin-right: 80px;
+    margin-right: 50px;
     font-weight:bold;
     font-size: 30px;
 }
 
 li ,h2 ,p{
-    color: rgb(236, 236, 238);
+    color: rgb(95, 43, 43);
+    font-size: 20px;
     
 } 
 .info{
         background-size: cover;
     background-repeat: no-repeat;
 
+}
+#diet-icon{
+    width: 30px; /* Adjust size as needed */
+    height: auto;
+    margin-right: 10px;
 }
