--- a/why.css
+++ b/why.css
@@ -44,9 +44,9 @@
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
-.fadeIn {
+.reason fadeIn {
     animation: fadeIn 1s ease-out;
-}
+} 
 .cta-button {
     display: block;
     width: 200px;
