--- a/miniproject.css
+++ b/miniproject.css
@@ -1,4 +1,4 @@
-header
+/* header
 {
     /* background-color: rgb(93, 20, 20); */
     color: rgb(93, 20, 20);
@@ -497,3 +497,4 @@ left: 0;
 #diet-images img:hover{
     transform: scale(1.16);
 } 
+ */
